# Domain-Specific-BERT-for-Depression-Detection

./: BERT.ipynb  ELMO_LSTM.ipynb  Fine_tuneBert.ipynb  README.md  WorkingElmo.ipynb
wine-agent/: .env.example  .gitignore  CHAT.md  README.md  SECURITY.md  feedback.md  pyproject.toml
wine-agent/chat/: __init__.py  api.py  config.py  embeddings.py  images.py  lang.py  llm.py  planner.py  prompt.py  ratelimit.py  retriever.py  security.py  service.py  sessions.py  snapshot.py  tracing.py  vectorstore.py
wine-agent/chat/static/: demo.html
wine-agent/context/: 01-technical-plan.md  02-vanbilsen-site-addendum.md  03-data-acquisition-plan.md  04-feedback-remediation-plans.md  04-roadmap.md  README.md  interrupted_plan.md
wine-agent/data/: seed_content.json  seed_products.json
wine-agent/ingest/: __init__.py  build_snapshot.py  crawl.py  crawler.py  fixture_shop.py  parsers.py  pipeline.py  seed.py  validate.py  xwines.py
wine-agent/schemas/: __init__.py  models.py  snapshot_format.py
wine-agent/tests/: conftest.py  test_api.py  test_chat_service.py  test_crawler.py  test_db_safety.py  test_filters.py  test_fixture_shop.py  test_hardening.py  test_images.py  test_injection.py  test_lang.py  test_llm.py  test_no_secrets.py  test_parsers.py  test_pipeline_e2e.py  test_planner.py  test_prompt.py  test_retriever.py  test_sessions.py  test_snapshot.py  test_validate.py  test_xwines.py
wine-agent/tests/fixtures/: xwines_sample.csv
wine-agent/wine_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
