[project]
name = "wine-agent"
version = "0.1.0"
description = "Grounded conversational agent for a wine shop — chat subsystem (first slice)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# Enables real tracing to Arize Phoenix (technical plan §5.5); optional.
tracing = ["arize-phoenix-otel", "openinference-instrumentation"]
# Groq's API is OpenAI-compatible — the official openai client just needs a
# different base_url (chat/llm.py's GroqLLM). Optional: most runs use the
# fake or Ollama backend and don't need this installed.
groq = ["openai>=1.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["schemas", "chat", "ingest"]
